<resources>
    <string name="app_name">NACAlc</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="naca">Profil NACA</string>
    <string name="xb">x / b</string>
    <string name="chord">Cięciwa (b)</string>
    <string name="next">Oblicz</string>
    <string name="max_arrow">Max strzalka (f)</string>
    <string name="max_arrow_place">Miejsce na max strz (xf)</string>
    <string name="profile_support">Wsp. Profilu (zg)</string>
    <string name="skeleton_support">Wsp. Szkieletowej (zf)</string>
    <string name="upper_edge_support_x">Wsp górnej krawedzi (xge)</string>
    <string name="upper_edge_support_z">Wsp górnej krawedzi (zge)</string>
    <string name="down_edge_support_x">Wsp dolnej krawedzi (xde)</string>
    <string name="down_edge_support_z">Wsp dolnej krawedzi (zde)</string>
    <string name="arctg_value">arctg (wartosc)</string>
    <string name="arctg_radians">arctg (radiany)</string>
    <string name="accurate_value">W. dokładna</string>
    <string name="approximate_value">W. przybliżona</string>
    <string name="percent">%</string>
    <string name="distance">Odleglos</string>
    <string name="f">F</string>
    <string name="project_of_support_force">Proj wsp sily nosnej</string>
    <string name="m">m</string>
    <string name="k1">k1</string>
    <string name="k2">k2</string>
    <string name="clean">Wyczyść</string>
</resources>
