<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="@dimen/standard_spacing"
    android:paddingBottom="@dimen/standard_spacing"
    android:paddingRight="@dimen/standard_spacing"
    android:paddingLeft="@dimen/standard_spacing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalSpacing="8dp"
    android:horizontalSpacing="8dp"
    android:columnCount="2"
    android:rowCount="11">

    <TextView
        android:text="@string/max_arrow"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_row="0"/>

    <TextView
        android:id="@+id/max_arrow"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_column="1"
        android:layout_row="0"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="@string/max_arrow_place"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_row="1"
        />

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:id="@+id/max_arrow_place"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_column="1"
        android:layout_row="1"/>

    <TextView
        android:text="@string/profile_support"
        android:layout_marginTop="@dimen/big_spacing"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_row="2"/>

    <TextView
        android:layout_marginTop="@dimen/big_spacing"
        android:id="@+id/profile_support"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_column="1"
        android:layout_row="2"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="@string/skeleton_support"
        android:textStyle="bold"
        android:layout_row="3"
        android:layout_column="0"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:id="@+id/skeleton_support"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="3"
        android:layout_column="1"/>

    <TextView
        android:layout_marginTop="@dimen/big_spacing"
        android:text="@string/arctg_value"
        android:textStyle="bold"
        android:layout_row="4"
        android:layout_column="0"/>

    <TextView
        android:layout_marginTop="@dimen/big_spacing"
        android:id="@+id/arcrg_value"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="4"
        android:layout_column="1"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="@string/arctg_radians"
        android:textStyle="bold"
        android:layout_row="5"
        android:layout_column="0"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:id="@+id/arctg_radians"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="5"
        android:layout_column="1"/>

    <TextView
        android:layout_marginTop="@dimen/big_spacing"
        android:text="@string/upper_edge_support_x"
        android:textStyle="bold"
        android:layout_row="6"
        android:layout_column="0"/>

    <TextView
        android:layout_marginTop="@dimen/big_spacing"
        android:id="@+id/upper_edge_support_x"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="6"
        android:layout_column="1"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="@string/upper_edge_support_z"
        android:textStyle="bold"
        android:layout_row="7"
        android:layout_column="0"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:id="@+id/upper_edge_support_z"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="7"
        android:layout_column="1"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="@string/down_edge_support_x"
        android:textStyle="bold"
        android:layout_row="8"
        android:layout_column="0"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:id="@+id/down_edge_support_x"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="8"
        android:layout_column="1"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:text="@string/down_edge_support_z"
        android:textStyle="bold"
        android:layout_row="9"
        android:layout_column="0"/>

    <TextView
        android:layout_marginTop="@dimen/standard_spacing"
        android:id="@+id/down_edge_support_z"
        android:text="xxx"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="9"
        android:layout_column="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_row="10"
        android:layout_columnSpan="2"
        android:orientation="horizontal"
        >
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>




</GridLayout>
