<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:paddingBottom="@dimen/standard_spacing"
    android:paddingLeft="@dimen/standard_spacing"
    android:paddingRight="@dimen/standard_spacing"
    android:paddingTop="@dimen/standard_spacing"
    android:rowCount="14">

    <TextView
        android:id="@+id/lol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/naca"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/naca_edit_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="0"
        android:ems="3"
        android:gravity="right"
        android:hint="0"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/naca_edit_2" />

    <EditText
        android:id="@+id/naca_edit_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="0"
        android:ems="2"
        android:gravity="right"
        android:hint="0"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/naca_edit_3" />

    <EditText
        android:id="@+id/naca_edit_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="0"
        android:ems="2"
        android:gravity="right"
        android:hint="0"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/naca_edit_4"
        android:singleLine="false" />

    <EditText
        android:id="@+id/naca_edit_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="0"
        android:ems="2"
        android:gravity="right"
        android:hint="00"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/xb" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/xb"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/xb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="1"
        android:ems="3"
        android:gravity="right"
        android:hint="0.0"
        android:inputType="numberDecimal"
        android:nextFocusDown="@+id/chord" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/chord"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/chord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="2"
        android:ems="3"
        android:gravity="right"
        android:hint="000"
        android:inputType="numberDecimal" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/f"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="@dimen/standard_spacing"
        android:layout_row="3"
        android:ems="3"
        android:gravity="right"
        android:hint="0.000"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_row="4"
        android:layout_columnSpan="5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clean_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/clean" />

        <Button
            android:id="@+id/next_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/next" />

    </LinearLayout>

</GridLayout>
